--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
   <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
+  
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;1,400&display=swap" rel="stylesheet">
   
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400&display=swap" rel="stylesheet">
   <!-- c -->
 
   <div id="loadOverlay" style="background-color:#333; position:fixed; top:0px; left:0px; width:100%; height:100%; z-index:2000;"></div>  
