push to ghpages

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  
+
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;1,400&display=swap" rel="stylesheet">
   
@@ -21,11 +21,11 @@
 </head>
 <body>
   <div class="fullwrapper">
-    <img id="background" src="./01_bg.png"/>
+    <img id="background" src="./01_bg.jpg"/>
   </div>
   <div id="turn">
     <div id="turnwarning">為維持網頁的最佳體驗，請將手機旋轉回直式。</div>
-    <img id="background" src="./01_bg.png"/>
+    <img id="background" src="./01_bg.jpg"/>
     
   </div>
   <div id="wrapper" class="container">
