push to ghpages

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <br>
       創作團隊｜<br>
       <a href="https://www.instagram.com/earthingway/"><img class="logo" src="earthing_white.png"></a>
-      <a href="https://zonesoundcreative.com/"><img class="logo" src="zonesound_white.jpg"></a>
+      <a href="https://zonesoundcreative.com/"><img class="logo" src="zonesound_white.png"></a>
       <br>
       <br>
       藝術總監與體驗設計：謝欣翰<br>
