--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <img id="footer" src="./03_footer.png"/>
       <!-- <h1>井中鏡</h1>
       <h3>面對自己心底的井說句話</h3>
-      <span>感情線｜2021萬華地景藝術節</span></br>
+      <span>聲音的奇幻異想-5感小旅行｜2022朱銘美術館兒童藝術教育雙年展</span></br>
       <button>點擊互動</button> -->
     </div>
     <div id="answer-page" class='step-2' style="display: none;">
@@ -62,13 +62,13 @@
       </p>
       <p>
       <br>
-      「地景回聲，面對自己心底的井說句話。」
+      「地景回聲，對自己心底的井說句話。」
       </p>
       <p>
-      透過探索萬華的田野採集，並結合前導工作坊「萬華的告白」與在地居民的共創成果，將過去反應人們尋求某種答案的報章雜誌、街頭廣告，像是尋人、徵婚、找工作或升學資訊，加上傳統宮廟跟命理攤的早期印刷與書報，融合當今生活在萬華的居民所書寫下的告白心聲，運用紙纖維雕塑技法重新組合拼貼，成為一座集合古今人們的追求與渴望的地井與地景。
+      由萬華田野調查與民眾共創出發，《井中鏡》將過去反映人們尋求某種答案的報章雜誌、街頭廣告，像是尋人、徵婚、找工作或升學資訊，加上傳統宮廟跟命理攤的早期印刷與書報，融合當今生活在萬華的居民所書寫下的告白心聲，運用紙纖維雕塑技法重新組合拼貼，成為一座集合古今人們的追求與渴望的地井與地景。
       </p>
       <p>
-      由不同時代的訊息組成的井，象徵萬華發展至今人們的慾望與心情，沿著地面砌起的字句土磚，往內至中心的水面映照出的自己，隱喻著現在的自己，是延續這片土地所發生的每一件事，所影響著的每一個人而成為的樣子。觀者可以透過閱讀古今訊息並透過互動裝置的提問回應，聆聽、觀看、思考、梳理，感受這個城市還有自己的心，那些過去與現在相同或不同的迷惘與課題。
+      由不同時代的訊息組成的井，象徵人們的慾望與心情，沿著地面砌起的字句土磚，往內至中心的水面映照出的自己，隱喻著現在的自己，是延續這片土地所發生的每一件事，所影響著的每一個人而成為的樣子。觀者可以透過閱讀古今訊息並透過互動裝置的提問回應，聆聽、觀看、思考、梳理，感受這個城市還有自己的心，那些過去與現在相同或不同的迷惘與課題。
       </p>
       <p>
       互動介面中設計了探討人的情感與覺察的隨機提問，讓參與者輸入想表達與回應的真實話語，互動裝置將發出觀者回應的內容作為井中的回音，就像在跟平行世界中的自己對話一般，透過水波漣漪與回聲震動產生內心的共鳴。放置於熙來攘往的城市廣場中，開放人群隨機參與，是一種連結不同時空通道的儀式體驗，也是一場探索心靈的行為展演。
@@ -89,12 +89,10 @@
       <br>
       <br>
       藝術總監與體驗設計：謝欣翰<br>
-      互動裝置與聲音設計：紀柏豪<br>
+      互動聲音裝置：紀柏豪<br>
       視覺與設計執行助理：沈芳玉<br>
-      聲音與互動執行助理：陳旻靖<br>
-      介面設計與互動協力：駱若瑀<br>
-      紙雕塑創作藝術家：林希羽 <br>
-      前導工作坊與文字協力：Date Myself 陳君芃<br> 
+      執行助理：陳旻靖<br>
+      紙雕塑協力：林希羽 <br> 
       </p>
       <p>
       <br>
