--- a/index.html
+++ b/index.html
@@ -62,18 +62,14 @@
       </p>
       <p>
       <br>
-      「地景回聲，對自己心底的井說句話。」
+      「聽聽地景的回聲，對自己心底的井說句話吧！」
       </p>
       <p>
-      由萬華田野調查與民眾共創出發，《井中鏡》將過去反映人們尋求某種答案的報章雜誌、街頭廣告，像是尋人、徵婚、找工作或升學資訊，加上傳統宮廟跟命理攤的早期印刷與書報，融合當今生活在萬華的居民所書寫下的告白心聲，運用紙纖維雕塑技法重新組合拼貼，成為一座集合古今人們的追求與渴望的地井與地景。
+      由不同時代報章訊息組成的井，象徵城市發展至今人們的夢想與感情，沿著地面砌起的字句土磚，往內至中心的水面映照出的自己，隱喻著現在的自己，是延續這片土地所發生的每一件事，所影響著的每一個人而成為的樣子。觀者可以透過閱讀古今訊息並透過互動裝置的提問回應，聆聽、觀看、思考、梳理，感受這個城市還有自己的心，那些過去跟現在的故事，還有那份對未來炙熱的願望。
       </p>
       <p>
-      由不同時代的訊息組成的井，象徵人們的慾望與心情，沿著地面砌起的字句土磚，往內至中心的水面映照出的自己，隱喻著現在的自己，是延續這片土地所發生的每一件事，所影響著的每一個人而成為的樣子。觀者可以透過閱讀古今訊息並透過互動裝置的提問回應，聆聽、觀看、思考、梳理，感受這個城市還有自己的心，那些過去與現在相同或不同的迷惘與課題。
+      互動介面中設計了探討人的情感與覺察的隨機提問，讓參與者輸入想表達與回應的真實話語，互動裝置將發出觀者回應的內容作為井中的回音，就像在跟平行世界中的自己對話一般，透過水波漣漪與回聲震動產生內心的共鳴。裝置外觀運用紙纖維雕塑技法重新組合拼貼，成為一座集合人們的願望與夢想的地井與地景。
       </p>
-      <p>
-      互動介面中設計了探討人的情感與覺察的隨機提問，讓參與者輸入想表達與回應的真實話語，互動裝置將發出觀者回應的內容作為井中的回音，就像在跟平行世界中的自己對話一般，透過水波漣漪與回聲震動產生內心的共鳴。放置於熙來攘往的城市廣場中，開放人群隨機參與，是一種連結不同時空通道的儀式體驗，也是一場探索心靈的行為展演。
-      </p>
-
       <p>
       <br>
       作品：井中鏡<br>
@@ -81,18 +77,22 @@
       </p>
       <p>
       <br>
-      製作群：<br>
       <br>
       創作團隊｜<br>
       <a href="https://www.instagram.com/earthingway/"><img class="logo" src="earthing_white.png"></a>
       <a href="https://zonesoundcreative.com/"><img class="logo" src="zonesound_white.png"></a>
       <br>
       <br>
-      藝術總監與體驗設計：謝欣翰<br>
-      互動聲音裝置：紀柏豪<br>
-      視覺與設計執行助理：沈芳玉<br>
-      執行助理：陳旻靖<br>
-      紙雕塑協力：林希羽 <br> 
+      製作群：<br>
+      互動裝置與聲音設計：紀柏豪<br>
+      聲音與互動技術執行：陳旻靖<br>
+      纖維雕塑創作藝術家：林希羽<br>
+      作品概念與體驗設計：謝欣翰<br>
+      視覺與介面設計執行：沈芳玉<br> 
+      </p>
+      <p>
+      附註說明與特別感謝：<br>
+      本作品為第二回巡展，首次展出於「2021臺北地景公共藝術計畫-萬華地景藝術節」透過工作坊的書寫以及田調的成果呈現於作品的部分呈現中，感謝當時萬華在地居民店家的協力，還有引導自由書寫的Date Myself陳君芃。以及所有參與過本件作品的各方長官與朋友。
       </p>
       <p>
       <br>
