--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       </p>
       <p>
       附註說明與特別感謝：<br>
-      本作品為第二回巡展，首次展出於「2021臺北地景公共藝術計畫-萬華地景藝術節」透過工作坊的書寫以及田調的成果呈現於作品的部分呈現中，感謝當時萬華在地居民店家的協力，還有引導自由書寫的Date Myself陳君芃。以及所有參與過本件作品的各方長官與朋友。
+      本作品為第二回巡展。首次展出於「2021臺北地景公共藝術計畫-萬華地景藝術節」透過工作坊的書寫以及田調的成果呈現於作品的部分呈現中，感謝當時萬華在地居民店家的協力，還有引導自由書寫的Date Myself陳君芃。以及所有參與過本件作品的各方長官與朋友。
       </p>
       <p>
       <br>
