--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
       <br>
       <br>
       創作團隊｜<br>
-      <a href="https://www.instagram.com/earthingway/"><img class="logo" src="earthing_white.png"></a>
-      <a href="https://zonesoundcreative.com/"><img class="logo" src="zonesound_white.png"></a>
+      <a href="https://www.instagram.com/earthingway/"><img class="logo" src="earthing_black.png"></a>
+      <a href="https://zonesoundcreative.com/"><img class="logo" src="zonesound_black.png"></a>
       <br>
       <br>
       製作群：<br>
