--- a/index.html
+++ b/index.html
@@ -1,111 +1,1 @@
-<!DOCTYPE html>
-<html lang="en" >
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="ScreenOrientation" content="autoRotate:disabled">
-  <title>井中鏡</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-  <script src="https://kit.fontawesome.com/a076d05399.js"></script> 
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;1,400&display=swap" rel="stylesheet">
-  
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400&display=swap" rel="stylesheet">
-  <!-- c -->
-
-  <div id="loadOverlay" style="background-color:#333; position:fixed; top:0px; left:0px; width:100%; height:100%; z-index:2000;"></div>  
-</head>
-<body>
-  <div class="fullwrapper">
-    <img id="background" src="./01_bg.png"/>
-  </div>
-  <div id="turn">
-    <div id="turnwarning">為維持網頁的最佳體驗，請將手機旋轉回直式。</div>
-    <img id="background" src="./01_bg.png"/>
-    
-  </div>
-  <div id="wrapper" class="container">
-    <div id="mainpage" class='step-1 mt-'>
-      <img id="title" src="./02_title.png"/>
-      <button id="start" type="button"> 點 擊 互 動 </button>
-      <img id="footer" src="./03_footer.png"/>
-      <!-- <h1>井中鏡</h1>
-      <h3>面對自己心底的井說句話</h3>
-      <span>聲音的奇幻異想-5感小旅行｜2022朱銘美術館兒童藝術教育雙年展</span></br>
-      <button>點擊互動</button> -->
-    </div>
-    <div id="answer-page" class='step-2' style="display: none;">
-        <p>
-          請依照隨機出現的問題，將回答輸入在回應欄中，送出即可聆聽井中鏡的心底回聲。
-        </p>
-        <p id="question">
-
-        </p>
-        <textarea id="input" class="md-textarea form-control" rows="3" placeholder="回答問題"></textarea>
-        <button id="answer" type="button"> 送 出 答 案 </button>
-        <button id="replay" type="button"> 
-          <i class="fas fa-undo" aria-hidden="true" style="margin-right: 0.8em"></i> 繼 續 回 答 
-        </button>
-        <button id="intro" type="button"> 
-          <i class="fas fa-external-link-alt" aria-hidden="true" style="margin-right: 0.8em"></i> 作 品 介 紹 
-        </button>
-      </div>
-    <div id="intropage" class='step-3' style="display: none;">
-      <!-- style="display: none;" -->
-      <img id="previmg" src="arrow_white.png"/>
-      <p>
-      <br>
-      井中鏡 Echo of the Mind
-      </p>
-      <p>
-      <br>
-      「聽聽地景的回聲，對自己心底的井說句話吧！」
-      </p>
-      <p>
-      由不同時代報章訊息組成的井，象徵城市發展至今人們的夢想與感情，沿著地面砌起的字句土磚，往內至中心的水面映照出的自己，隱喻著現在的自己，是延續這片土地所發生的每一件事，所影響著的每一個人而成為的樣子。觀者可以透過閱讀古今訊息並透過互動裝置的提問回應，聆聽、觀看、思考、梳理，感受這個城市還有自己的心，那些過去跟現在的故事，還有那份對未來炙熱的願望。
-      </p>
-      <p>
-      互動介面中設計了探討人的情感與覺察的隨機提問，讓參與者輸入想表達與回應的真實話語，互動裝置將發出觀者回應的內容作為井中的回音，就像在跟平行世界中的自己對話一般，透過水波漣漪與回聲震動產生內心的共鳴。裝置外觀運用紙纖維雕塑技法重新組合拼貼，成為一座集合人們的願望與夢想的地井與地景。
-      </p>
-      <p>
-      <br>
-      作品：井中鏡<br>
-      材質：紙纖維、樹脂、木、鐵、鏡、電子設備<br>
-      </p>
-      <p>
-      <br>
-      <br>
-      創作團隊｜<br>
-      <a href="https://www.instagram.com/earthingway/"><img class="logo" src="earthing_white.png"></a>
-      <a href="https://zonesoundcreative.com/"><img class="logo" src="zonesound_white.png"></a>
-      <br>
-      <br>
-      製作群：<br>
-      互動裝置與聲音設計：紀柏豪<br>
-      聲音與互動技術執行：陳旻靖<br>
-      纖維雕塑創作藝術家：林希羽<br>
-      作品概念與體驗設計：謝欣翰<br>
-      視覺與介面設計執行：沈芳玉<br> 
-      </p>
-      <p>
-      附註說明與特別感謝：<br>
-      本作品為第二回巡展。首次展出於「2021臺北地景公共藝術計畫-萬華地景藝術節」透過工作坊的書寫以及田調的成果呈現於作品的部分呈現中，感謝當時萬華在地居民店家的協力，還有引導自由書寫的Date Myself陳君芃。以及所有參與過本件作品的各方長官與朋友。
-      </p>
-      <p>
-      <br>
-      製作過程與工作坊側拍紀錄：
-      <br>
-      <br>
-      <img class="progressimg" src="intro-1.jpg">
-      <img class="progressimg" src="intro-2.jpg">
-      <img class="progressimg" src="intro-3.jpg">
-      <img class="progressimg" src="intro-4.jpg">
-      <img class="progressimg" src="intro-5.jpg">
-      </p>
-    </div>
-  </div>
-</body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta http-equiv="ScreenOrientation" content="autoRotate:disabled"><title>井中鏡</title><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"><script src="https://kit.fontawesome.com/a076d05399.js"></script><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;1,400&display=swap" rel="stylesheet"><link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400&display=swap" rel="stylesheet"><div id="loadOverlay" style="background-color:#333; position:fixed; top:0px; left:0px; width:100%; height:100%; z-index:2000;"></div></head><body><div class="fullwrapper"><img id="background" src="./01_bg.png"/></div><div id="turn"><div id="turnwarning">為維持網頁的最佳體驗，請將手機旋轉回直式。</div><img id="background" src="./01_bg.png"/></div><div id="wrapper" class="container"><div id="mainpage" class="step-1 mt-"><img id="title" src="./02_title.png"/> <button id="start" type="button">點 擊 互 動</button> <img id="footer" src="./03_footer.png"/></div><div id="answer-page" class="step-2" style="display: none;"><p>請依照隨機出現的問題，將回答輸入在回應欄中，送出即可聆聽井中鏡的心底回聲。</p><p id="question"></p><textarea id="input" class="md-textarea form-control" rows="3" placeholder="回答問題"></textarea> <button id="answer" type="button">送 出 答 案</button> <button id="replay" type="button"><i class="fas fa-undo" aria-hidden="true" style="margin-right: 0.8em"></i> 繼 續 回 答</button> <button id="intro" type="button"><i class="fas fa-external-link-alt" aria-hidden="true" style="margin-right: 0.8em"></i> 作 品 介 紹</button></div><div id="intropage" class="step-3" style="display: none;"><img id="previmg" src="arrow_white.png"/><p><br>井中鏡 Echo of the Mind</p><p><br>「聽聽地景的回聲，對自己心底的井說句話吧！」</p><p>由不同時代報章訊息組成的井，象徵城市發展至今人們的夢想與感情，沿著地面砌起的字句土磚，往內至中心的水面映照出的自己，隱喻著現在的自己，是延續這片土地所發生的每一件事，所影響著的每一個人而成為的樣子。觀者可以透過閱讀古今訊息並透過互動裝置的提問回應，聆聽、觀看、思考、梳理，感受這個城市還有自己的心，那些過去跟現在的故事，還有那份對未來炙熱的願望。</p><p>互動介面中設計了探討人的情感與覺察的隨機提問，讓參與者輸入想表達與回應的真實話語，互動裝置將發出觀者回應的內容作為井中的回音，就像在跟平行世界中的自己對話一般，透過水波漣漪與回聲震動產生內心的共鳴。裝置外觀運用紙纖維雕塑技法重新組合拼貼，成為一座集合人們的願望與夢想的地井與地景。</p><p><br>作品：井中鏡<br>材質：紙纖維、樹脂、木、鐵、鏡、電子設備<br></p><p><br><br>創作團隊｜<br><a href="https://www.instagram.com/earthingway/"><img class="logo" src="earthing_black.png"></a><a href="https://zonesoundcreative.com/"><img class="logo" src="zonesound_black.png"></a><br><br>製作群：<br>互動裝置與聲音設計：紀柏豪<br>聲音與互動技術執行：陳旻靖<br>纖維雕塑創作藝術家：林希羽<br>作品概念與體驗設計：謝欣翰<br>視覺與介面設計執行：沈芳玉<br></p><p>附註說明與特別感謝：<br>本作品為第二回巡展。首次展出於「2021臺北地景公共藝術計畫-萬華地景藝術節」透過工作坊的書寫以及田調的成果呈現於作品的部分呈現中，感謝當時萬華在地居民店家的協力，還有引導自由書寫的Date Myself陳君芃。以及所有參與過本件作品的各方長官與朋友。</p><p><br>製作過程與工作坊側拍紀錄：<br><br><img class="progressimg" src="intro-1.jpg"> <img class="progressimg" src="intro-2.jpg"> <img class="progressimg" src="intro-3.jpg"> <img class="progressimg" src="intro-4.jpg"> <img class="progressimg" src="intro-5.jpg"></p></div></div><script src="main.bundle.js"></script></body></html>
